cmake_minimum_required(VERSION 3.31)
project(algorithm2)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithm2
        main.cpp
        "binsearch/값 존재 여부 확인/10815.cpp"
        bronze_3/8932.cpp
        "binsearch/최대최소값 찾기/2343.cpp"
        bronze_4/27110.cpp
        "binsearch/최대최소값 찾기/2805.cpp"
        "binsearch/최대최소값 찾기/2110.cpp"
        "binsearch/특정 위치/12738.cpp"
        "binsearch/특정 위치/12015.cpp"
        bronze_3/6830.cpp
        bronze_3/11648.cpp
        bronze_3/9550.cpp
        bronze_3/2522.cpp
        bronze_4/30031.cpp
        bronze_4/26592.cpp
        bronze_3/11134.cpp
        bronze_4/4470.cpp
        bronze_3/10103.cpp
        bronze_3/9610.cpp

)
